--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=/server/api
-VITE_IMAGE_URL=/server/public
+VITE_API_URL=http://localhost/leopando/server/api
+VITE_IMAGE_URL=http://localhost/leopando/server/public
