--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
+    "@google/model-viewer": "^4.1.0",
+    "@hcaptcha/vue3-hcaptcha": "^1.3.0",
     "@mdi/font": "^7.4.47",
     "@unhead/vue": "^2.0.14",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.9.0",
     "jspdf": "^3.0.1",
+    "lucide-vue-next": "^0.545.0",
     "vue": "^3.5.13",
+    "vue-3d-loader": "^2.2.4",
     "vue-material-design-icons": "^5.3.1",
     "vue-recaptcha": "^3.0.0-alpha.2",
     "vue-router": "^4.5.0",
@@ -14,11 +18,15 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "@vitejs/plugin-vue": "^5.2.3",
+    "@tailwindcss/vite": "^4.1.14",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "autoprefixer": "^10.4.21",
     "material-design-icons-iconfont": "^6.7.0",
+    "postcss": "^8.5.6",
     "sass": "^1.87.0",
     "sass-loader": "^16.0.5",
-    "vite": "^6.3.2"
+    "tailwindcss": "^4.1.14",
+    "vite": "^6.3.6"
   },
   "scripts": {
     "dev": "vite",
