--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "jspdf": "^3.0.1",
     "lucide-vue-next": "^0.545.0",
+    "tailwind-merge": "^3.3.1",
     "vue": "^3.5.13",
     "vue-3d-loader": "^2.2.4",
     "vue-material-design-icons": "^5.3.1",
