--- a/server/composer.json
+++ b/server/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "guzzlehttp/guzzle": "^7.9",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "phpmailer/phpmailer": "^7.0"
     }
 }
